--- a/index1.html
+++ b/index1.html
@@ -1,76 +1,111 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1,
+            shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+            integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+            crossorigin="anonymous">
 
-    <title>Hi</title>
-  </head>
-  <body style="text-align: center;">
-    <div class="alert alert-primary" role="alert">
-        Hurry up buddy time doesnt w8 for any one
-    </div>
-<button type="button" class="btn btn-primary">Primary</button>
-<button type="button" class="btn btn-secondary">Secondary</button>
-<button type="button" class="btn btn-success">Success</button>
-<button type="button" class="btn btn-danger">Danger</button>
-<button type="button" class="btn btn-warning">Warning</button>
-<button type="button" class="btn btn-info">Info</button>
-<button type="button" class="btn btn-light">Light</button>
-<button type="button" class="btn btn-dark">Dark</button>
+        <title>Hi</title>
+    </head>
+    <body style="text-align: center;">
+        <div class="alert alert-warning" role="alert">
+            Hurry up buddy time doesnt w8 for any one
+        </div>
+        <div class="w-75 mx-auto my-3">
+            <h1>Tata bye!</h1>
+            <a href="https://codeforces.com/" class="btn btn-block btn-info w-75 mx-auto">Open Codeforces</a>
+            <p>It's a good by 2020 codeforces contset by <span
+                    style="font-weight: 700;">Tou<span class="text-danger">rist</span></span></p>
+            <h3>Google CodeJam</h3>
+            <img class="w-100"
+                src="https://miro.medium.com/max/1400/1*ALR2kT9Ah999GPwrCRAmKg.jpeg"
+                alt="">
+            <div class="row">
+                <div class="col-md-6 p-5">
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the
+                                card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 p-5">
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the
+                                card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 p-5">
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the
+                                card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 p-5">
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the
+                                card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>    
+            
+            
+            <div class="card">
+                <div class="card-body">
+                    <h5>Tourist is champ again 😍</h5>
+                </div>
+            </div>
+            <div style="background-color: lightgrey;">
+                <img class="mx-auto w-75" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5CeUPt3vVM9UYg-K9TyRPgNekpILQnBdvgA&usqp=CAU" alt="">
+            </div>
+            <div class="jumbotron">
+                <h1 class="display-4">Google codejam 2020 Analysis</h1>
+                <p class="lead">Tourist once again</p>
+                <hr class="my-4">
+                <p>Tourist won the first place along with ecnerwala on second
+                    and ksun48 acheiving third</p>
 
-<button type="button" class="btn btn-link">Link</button>
-<a class="btn btn-primary" href="#" role="button">Link</a>
-<button class="btn btn-primary" type="submit">Button</button>
-<input class="btn btn-primary" type="button" value="Input">
-<input class="btn btn-primary" type="submit" value="Submit">
-<input class="btn btn-primary" type="reset" value="Reset">
-<button type="button" class="btn btn-primary btn-lg">Large button</button>
-<button type="button" class="btn btn-secondary btn-lg">Large button</button>
-
-    <h1>Tata bye!</h1>
-    <a href="https://codeforces.com/">Open Codeforces</a>
-    <p>It's a good by 2020 codeforces contset by Tourist</p>
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
-<div class="card">
-  <div class="card-body">
-    This is some text within a card body.
-  </div>
-</div>
-    <div style="background-color: khaki;">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis, tenetur est, laudantium eaque unde non praesentium ducimus deleniti fugiat obcaecati facilis nulla neque. Explicabo sed debitis beatae fuga possimus! Aliquid, neque autem! Repellat veniam placeat provident fugiat hic. Debitis culpa ipsa molestiae maiores repellendus enim explicabo, nemo ea amet similique minima veniam nulla eveniet facilis mollitia! Tempora, voluptatibus quaerat porro quam aperiam quod sunt, sequi magnam voluptas odit molestiae repudiandae fugit a placeat saepe voluptates perspiciatis iusto! Ad quam soluta aspernatur tempore dicta ut, temporibus deleniti vero laudantium minima voluptate, assumenda laboriosam adipisci aliquid eaque illo corrupti? Qui repellendus consectetur unde sunt consequatur soluta recusandae veniam, id quas, ea nostrum atque exercitationem laboriosam nulla, iusto dolores voluptatum cupiditate voluptatibus eum quaerat optio. Sunt quaerat, error minus eaque itaque nostrum voluptatibus. Odit, eligendi reprehenderit laudantium nam rem enim ipsa recusandae dolor doloremque tenetur accusamus, nisi et. Asperiores, cum ipsum! Commodi nisi cumque aliquam nulla architecto. Maiores laboriosam laudantium animi quia optio nulla doloremque quidem enim, aliquam rerum iure adipisci repudiandae est consectetur incidunt quisquam rem cum unde dolore, cumque maxime. Temporibus non provident, sequi perferendis excepturi nam blanditiis, eius dolores neque modi cum cupiditate dignissimos eum, iusto similique autem hic corrupti facere quidem quo nemo itaque? Tenetur debitis, illum eligendi molestias ipsum, quos amet voluptatem exercitationem commodi molestiae nemo sequi! Magnam iure fuga doloribus neque architecto ducimus cumque molestias labore, voluptate nobis nemo. Beatae veritatis vero deleniti quod neque soluta omnis ipsum molestias illo incidunt quisquam aut, eligendi tempora, dolor est fugiat optio impedit officia quasi commodi sint mollitia. Neque sint veritatis inventore maiores libero quas, odit laborum hic id, illum quidem perspiciatis a accusantium nulla autem minima modi esse similique quo in doloremque? Ut facilis, ad distinctio debitis cum nostrum illum accusamus quae eos sint, vero omnis, recusandae nemo dignissimos?</p>
-    </div>
-    <div class="jumbotron">
-        <h1 class="display-4">Google codejam 2020 Analysis</h1>
-        <p class="lead">Tourist once again</p>
-        <hr class="my-4">
-        <p>Tourist won the first place along with ecnerwala on second and ksun48 acheiving third</p>
-
-        <a class="btn btn-primary btn-lg" href="#" role="button">Read more</a>
-      </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  </body>
+                <a class="btn btn-danger btn-lg" href="#" role="button">Read
+                    more</a>
+            </div>
+        </div>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+            crossorigin="anonymous"></script>
+    </body>
 </html>
